2001-11-02  Mo DeJong  <supermo@bayarea.net>

	* configure.in: Add --enable-jikes-namespace flag. Jikes classes
	and functions will be defined in a C++ namespace when enabled.
	* configure: Regen.
	* src/config.h.in: Regen. Patch 220.

2001-11-01  Eric Blake  <ebb9@email.byu.edu>

	* src/option.cpp (enum ParseState): Inline into the single method
	where it was used.
	* src/scanner.h:
	* src/scanner.cpp (ScanStarComment): Update comment scanning to
	allow embedded Ctrl-Z, bug 2352. Also, detect @deprecated only if
	it begins a line in the comment, bug 519 - patch 219.

2001-11-01  Eric Blake  <ebb9@email.byu.edu>

	* src/option.h:
	* src/option.cpp (ArgumentExpander): Update @file parsing to match
	Sun's javac. Rearrange error reporting so that parse errors can be
	easily detected.
	* src/jikesapi.cpp (parseOptions):
	* src/control.h (ProcessNewInputFiles):
	* src/control.cpp (ProcessNewInputFiles): Update to account for
	earlier error detection.

2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp: Fix up formatting.
	* src/control.cpp: Fix up formatting. Fix report of # of .java
	files processed, bug 1818.

2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/option.h (OptionError):
	* src/platform.cpp (U8S_help_header): Fix compile issues with
	HP-UX aCC.

2001-10-31  Eric Blake  <ebb9@email.byu.edu>

	Patch 211:
	* doc/jikes.1: Update the man page to reflect options changes.
	* src/jikesapi.h:
	* src/jikesapi.cpp:
	* src/option.h:
	* src/option.cpp (Option): Add -encoding option on builds without
	encoding, which prints an error message - bug 2242. Add various
	options synonyms - bug 339. Add -source, -target, and -J options,
	as well as making -g work like in javac - bug 273.
	* src/bytecode.cpp:
	* src/class.h (Write):
	* src/control.cpp:
	* src/definite.cpp:
	* src/error.cpp:
	* src/error.h:
	* src/platform.cpp:
	* src/platform.h:
	* src/semantic.h: Update to use improved options.